# latex2wp

./: .gitignore  Main.hs  Makefile  README  README.md  example.tex  latex2wp.cabal  latex2wp.hs  math2png  stack.yaml
src/: Main.hs
tests/: test.tex
