name:                latex2wp
version:             1.0
synopsis:            A LaTeX -> WordPress utility built on Pandoc.
homepage:            http://github.com/cangiuli/latex2wp#readme
author:              Carlo Angiuli
maintainer:          carlo@carloangiuli.com
copyright:           2015 Carlo Angiuli
category:            Text
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable latex2wp-exe
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , pandoc >= 1.14
                     , text
                     , filepath
                     , process
                     , mtl
                     , texmath
                     , cryptonite
                     , bytestring
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/cangiuli/latex2wp
